# LDds

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_STRUCTURE.md  README - 副本.md  README.md  file1.lidl  file2.lidl  qos.xml  step.md
LDds/: .gitignore  CMakeLists.txt
LDds/include/LDds/: LDds.h  LDomain.h  LFindSet.h  LIdlGenerator.h  LIdlParser.h  LQos.h
LDds/src/core/: LDomain.cpp  LFindSet.cpp  LQos.cpp
LDds/src/idl/: LIdlGenerator.cpp  LIdlParser.cpp  main.cpp
cmake/: module.cmake  module_qt.cmake
docs/: codex_task_order_template.md  phase1_domain_rules.md  phase2_tcp_reconnect.md  phase_definition_of_done_checklist.md
reports/: phase7_industrial_baseline.md  src_unit_test_report.md
scripts/: run_all_stage_tests.ps1  run_phase7_industrial_matrix.ps1  run_src_unit_tests.ps1  run_stage10_discovery_smoke.ps1  run_stage11_phase5_smoke.ps1  run_stage12_phase6_smoke.ps1  run_stage13_phase7_smoke.ps1  run_stage1_domain_smoke.ps1  run_stage2_tcp_reconnect_smoke.ps1
scripts/stage10_discovery_smoke/: CMakeLists.txt  main.cpp
scripts/stage11_phase5_smoke/: CMakeLists.txt  main.cpp
scripts/stage12_phase6_smoke/: CMakeLists.txt  main.cpp
scripts/stage13_phase7_codegen/: CMakeLists.txt  main.cpp
scripts/stage13_phase7_validator/: CMakeLists.txt  main.cpp
scripts/stage1_domain_smoke/: CMakeLists.txt  main.cpp
scripts/stage2_tcp_reconnect_smoke/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/ExampleIdlPipeline/: main.cpp
src/App/ExampleQosInit/: CMakeLists.txt  main.cpp
src/App/ExampleTypedPubSub/: main.cpp
src/App/ExampleUdpBytesPubSub/: CMakeLists.txt  main.cpp
src/App/LIdl/: CMakeLists.txt  main.cpp
src/App/LIdlApp/: CMakeLists.txt  main.cpp
src/App/LTransportTest/: CMakeLists.txt  main.cpp
src/App/SimPlatformDdsTest/: CMakeLists.txt  main.cpp
src/App/idl_generated/: CMakeLists.txt  pubsub_demo_define.h  pubsub_demo_export.h  pubsub_demo_topic.cpp  pubsub_demo_topic.h
src/App/pub/: CMakeLists.txt  main.cpp
src/App/sub/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt
src/Core/LDdsCore/: CMakeLists.txt  LDdsCore.cpp  LDdsCore.h  LDdsCore_global.h
src/Lib/: CMakeLists.txt
src/Lib/LDds/: CMakeLists.txt  LDds.cpp  LDds.h  LDdsCore.cpp  LDdsCore.h  LDds_global.h  LDomain.cpp  LDomain.h  QoSConfig.cpp  QoSConfig.h  TopicCache.cpp  TopicCache.h
src/Lib/LDdsCore/: CMakeLists.txt  ITransport.cpp  ITransport.h  LAbstractSocket  LByteArray  LByteBuffer.cpp  LByteBuffer.h  LDds.cpp  LDds.h  LDdsRecordReplay.cpp  LDdsRecordReplay.h  LDdsTypes.h  LDds_Global.h  LDebug  LDomain.cpp  LDomain.h  LFindSet.cpp  LFindSet.h  LHostAddress  LIdlGenerator.cpp  LIdlGenerator.h  LIdlParser.cpp  LIdlParser.h  LMessage.cpp  LMessage.h  LQos.cpp  LQos.h  LQtCompat.h  LSocketUtil.h  LString  LTcpServer  LTcpSocket  LTcpTransport.cpp  LTcpTransport.h  LThread  LTypeRegistry.cpp  LTypeRegistry.h  LUdpSocket  LUdpTransport.cpp  LUdpTransport.h  (+1 more)
src/Lib/LIdl/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  IdlParser.cpp  IdlParser.h  LIdl.cpp  LIdl.h  LIdl_global.h  LidlParserStructs.h
src/Tools/LidlTool/include/LidlTool/: Lidl.h
src/Tools/LidlTool/src/: LidlTool.cpp
src/test/: CMakeLists.txt
src/test/LDdsCoreUnitTests/: main.cpp
